<resources>
    <string name="app_name">MyTasksApp</string>


    <string name="txt_email_login_fragment">E-mail</string>
    <string name="txt_password_login_fragment">Password</string>
    <string name="txt_createaccount_login_fragment">Create Account</string>
    <string name="txt_recoverpassword_login_fragment">Recover Password</string>

    <string name="txt_title_recover_fragment">Enter your e-mail to send a password recover link</string>
    <string name="txt_email_recover_fragment">E-mail</string>

    <string name="txt_email_register_fragment">E-mail</string>
    <string name="txt_password_register_fragment">Password</string>
    <string name="txt_confirmpassword_register_fragment">Confirm Password</string>
    <string name="txt_login_register_fragment">Have a account? Login</string>

    <!-- FORM TASK FRAGMENT -->
    <string name="txt_title_form_create_task">Create Task</string>
    <string name="txt_title_form_edit_task">Edit Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>